# app/resources/market.py
@@ -1,0 +1,97 @@
+from flask_restful import Resource
+from flask import request
+from flask_jwt_extended import jwt_required, get_jwt_identity
+from app import db
+import os
+import re
+
+from app.models import Product, User
+
+ALLOWED_EXTENSIONS = {'png', 'jpg', 'jpeg', 'gif'}
+UPLOAD_FOLDER = 'static/uploads/items_images'
+
+def secure_filename(filename):
+    filename = re.sub(r'[^A-Za-z0-9_.-]', '_', filename)
+    return filename
+
+def allowed_file(filename):
+    return '.' in filename and \
+           filename.rsplit('.', 1)[1].lower() in ALLOWED_EXTENSIONS
+
+class ProductsGETResource(Resource):
+    def get(self):
+        return [product.serialize() for product in Product.query.all()]
+    
+class ProductsPOSTResource(Resource):
+    def post(self):
+        result = jwt_required()(self._post)()  # Applying decorator directly and calling wrapped method
+        return result
+
+    def _post(self):
+        user_id = get_jwt_identity()
+        user = User.query.get(user_id)
+        if not user:
+            return {"message": "Unauthorized"}, 401
+        
+        if 'image' not in request.files:
+            return {"message": "No file part"}, 400
+        
+        image = request.files['image']
+        if image.filename == '':
+            return {"message": "No selected file"}, 400
+        
+        # Ensure the upload folder exists
+        if not os.path.exists(UPLOAD_FOLDER):
+            os.makedirs(UPLOAD_FOLDER)
+        
+        if image and allowed_file(image.filename):
+            filename = secure_filename(image.filename)
+            file_path = os.path.join(UPLOAD_FOLDER, filename)
+            image.save(os.path.join(UPLOAD_FOLDER, filename))
+        else:
+            return {"message": "File not allowed"}, 400
+        
+        data = request.form
+        name = data.get('name')
+        price = data.get('price')
+        description = data.get('description')
+        new_product = Product(name=name, price=price, description=description, image=file_path, user_id=user_id)
+        db.session.add(new_product)
+        db.session.commit()
+        return new_product.serialize(), 201
+    
+class ProductResource(Resource):
+    def get(self, id):
+        product = Product.query.get(id)
+        if product:
+            return product.serialize()
+        return None
+    
+    @jwt_required
+    def put(self, id):
+        user_id = get_jwt_identity()
+        user = User.query.get(user_id)
+        if not user:
+            return {"message": "Unauthorized"}, 401
+        data = request.get_json()
+        name = data.get('name')
+        price = data.get('price')
+        description = data.get('description')
+        image = data.get('image')
+        product = Product.query.get(id)
+        if product:
+            product.name = name
+            product.price = price
+            product.description = description
+            product.image = image
+            db.session.commit()
+            return product.serialize()
+        return None
+    @jwt_required
+    def delete(self, id):
+        product = Product.query.get(id)
+        if product:
+            db.session.delete(product)
+            db.session.commit()
+            return product.serialize()
+        return None
